--- a/recipe.css
+++ b/recipe.css
@@ -22,7 +22,7 @@
 
 body {
   font-family: Outfit, sans-serif;
-  background-color: #f9e8f3af;
+  background-color: #F3E5D8;
   display: flex;
   flex-direction: column;
   justify-content: center;
